--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-12 col-lg-6">
-            <img src="./images/1.jpg" class=" d-block mx-lg-auto rounded-circle img-fluid" alt="profile-img" width="150" height="150" loading="lazy">
+            <img src="./images/profile-img.jpg" class=" d-block mx-lg-auto rounded-circle img-fluid" alt="profile-img" width="200" height="100" loading="lazy">
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="text-decoration: underline;">About me</h1>
